--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,4 +8,12 @@ spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.jpa.database-platform=org.hibernate.dialect.SQLServerDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.web.resources.static-locations=classpath:/static/
+#spring.datasource.url=jdbc:mysql://localhost:3306/tu_base_de_datos
+#spring.datasource.username=tu_usuario
+#spring.datasource.password=tu_contraseña
+#spring.jpa.hibernate.ddl-auto=update
+spring.thymeleaf.cache=false
+spring.servlet.multipart.max-file-size=100MB
 
+storage.location=images
